--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    HOMEE
-  </body>
+<head>
+  <%- include('./partials/_head.ejs') %>
+</head>
+<body>
+
+<%- include('./partials/_navbar.ejs') %>
+<%- include('./partials/_settings_modal.ejs') %>
+
+<div class="container">
+  <div class="row">
+    <div class="col-12">
+      HOME
+    </div>
+  </div>
+</div>
+
+<%- include('./partials/_foot.ejs') %>
+
+</body>
 </html>
